MainMethodTestCases/src/com/example/valid/Main2.java
package com.example.valid;

public class Main2 {

	/**
	 * Valid.
	 * 
	 * This is the most common form of the main method except that the variable
	 * accepting command line arguments has been renamed to someOtherName. The
	 * name of the variable is insignificant.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public static void main(String[] someOtherName) {
		System.out.println("Main2!");
	}
	
}
